--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,20 @@
+*{
+  box-sizing: border-box;
+  margin:0;
+  padding:0;
+}
+.game{
+  width:300px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.boxGame{
+  width: 100px;
+  height: 100px;
+  border:1px solid green;
+  line-height: 100px;
+  text-align: center;
+}
 .App {
   text-align: center;
 }
